# rest-service

./: .gitignore  readme.md  rest-service.cabal
src/Rest/: Service.hs  Types.hs
