name:                rest-service
version:             0.1.0.0
synopsis:            Efficient anagram solving as a web service
description:         Efficient anagram solving as a web service
license:             BSD2
license-file:        LICENSE
author:              Jochen Keil
maintainer:          Jochen Keil <jochen.keil+rest-service@gmail.com>
homepage:            http://github.com/jotrk/rest-service/
bug-reports:         http://github.com/jotrk/rest-service/issues

category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jotrk/rest-service.git

library
  exposed-modules:   Rest.Service
                     Rest.Types

  build-depends:     base                 >= 4.7  && < 4.8,
                     text >= 1.2,
                     wai-cors >= 0.2,
                     warp >= 3.0,
                     scotty >= 0.9,
                     aeson >= 0.8


  other-extensions:  OverloadedStrings,
                     TemplateHaskell

  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
